--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Pascal Blondeau{% endblock %}</title>
-
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    	<meta name="Description" content="Portfolio of the Artist Photographer Pascal Blondeau" />
         {% block stylesheets %}
             {% include "::components/_stylesheets.html.twig" %}
         {% endblock %}
