WOrk on home page

--- a/app/Resources/views/components/_navigationPublic.html.twig
+++ b/app/Resources/views/components/_navigationPublic.html.twig
@@ -33,7 +33,7 @@
     </li>
 
     <li>
-        <a href="{{ path('contact_public_display') }}" title="" {% block currentContact %}{% endblock %}>
+        <a href="mailto:pascblondeau@yahoo.fr" title="" {% block currentContact %}{% endblock %}>
             {{ 'header.navigation.contact.label'| trans({}) }}
         </a>
     </li>
